--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 
 <head>
-    <title>Title</title>
+    <title>Essai carte avec OpenStreetMap</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -17,11 +17,11 @@
 
 <body>
 
-    <h1 id="test">Essai carte</h1>
+    <h1 class="text-center">Essai carte avec OpenStreetMap</h1>
     <div class="container">
-        <div class="row">
+        <div class="row pt-3">
             <div class="col">
-                <div id="map" class="border"></div>
+                <div id="map" class="border border-dark shadow-lg rounded-lg"></div>
             </div>
         </div>
     </div>
@@ -29,11 +29,9 @@
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="src/js/jquery-3.4.1.min.js"></script>
-    
-    
     <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"></script>
     <script src="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.js"></script>
-    <script src="maCarte.js"></script>
+    <script async src="src/js/maCarte.js"></script>
 
 </body>
 
