--- a/index.html
+++ b/index.html
@@ -1,24 +1,19 @@
 <!doctype html>
 <html lang="fr">
-
 <head>
     <title>Essai carte avec OpenStreetMap</title>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="src/css/bootstrap.min.css">
     <link rel="stylesheet" href="src/css/style.css">
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" />
-    <link rel="stylesheet" href="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.css" />
-
+    <link rel="stylesheet" href="src/css/leaflet.css">
 </head>
 
 <body>
 
     <h1 class="text-center">Essai carte avec OpenStreetMap</h1>
-    <div class="container">
+    <div class="container-fluid px-0">
         <div class="row pt-3">
             <div class="col">
                 <div id="map" class="border border-dark shadow-lg rounded-lg"></div>
@@ -26,12 +21,9 @@
         </div>
     </div>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="src/js/jquery-3.4.1.min.js"></script>
-    <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"></script>
-    <script src="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.js"></script>
-    <script async src="src/js/maCarte.js"></script>
+    <script src="src/js/leaflet.js"></script>
+    <script src="src/js/map.js"></script>
 
 </body>
 
