--- a/index.html
+++ b/index.html
@@ -1,29 +1,23 @@
 <!doctype html>
-<html lang="fr">
+<html lang="en">
 <head>
-    <title>Essai carte avec OpenStreetMap</title>
+    <title>Simple map test with OpenStreetMap</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="src/css/bootstrap.min.css">
     <link rel="stylesheet" href="src/css/style.css">
     <link rel="stylesheet" href="src/css/leaflet.css">
 </head>
 
 <body>
 
-    <h1 class="text-center">Essai carte avec OpenStreetMap</h1>
-    <div class="container-fluid px-0">
-        <div class="row pt-3">
-            <div class="col">
-                <div id="map" class="border border-dark shadow-lg rounded-lg"></div>
-            </div>
-        </div>
-    </div>
+<h1 class="text-center">Simple map test with OpenStreetMap</h1>
+<div class="container-full mt-5">
+    <div id="map"></div>
+</div>
 
-    <script src="src/js/jquery-3.4.1.min.js"></script>
-    <script src="src/js/leaflet.js"></script>
-    <script src="src/js/map.js"></script>
+<script src="src/js/leaflet.js"></script>
+<script src="src/js/map.js"></script>
 
 </body>
 
