--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>Simple map test with OpenStreetMap</title>
+    <title>Simple map test with OpenStreetMap - Vanilla JS</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -11,7 +11,7 @@
 
 <body>
 
-<h1 class="text-center">Simple map test with OpenStreetMap</h1>
+<h1 class="text-center">Simple map test with OpenStreetMap - Vanilla JS</h1>
 <div class="container-full mt-5">
     <div id="map"></div>
 </div>
